Bug 990154: move the enum CodeKind definition outside #if ENABLE_ASSEMBLER to unbreak non-asm platforms r=jandem,a=lsblakk